# toecs

./: Cargo.toml  LICENSE  README.md
src/: cmd.rs  comp.rs  ent.rs  lib.rs  query.rs  res.rs  serde.rs  sparse.rs  sys.rs  tests.rs  world.rs
src/serde/: de.rs  ser.rs
src/sys/: erased.rs  owned.rs
src/world/: borrow.rs  comp.rs  ent.rs  fetch.rs  res.rs  sparse.rs  tests.rs
tests/it/: main.rs  serde_test.rs
toecs_derive/: Cargo.toml
toecs_derive/src/: borrow.rs  component.rs  component_set.rs  fetch.rs  lib.rs  resource.rs
toecs_derive/tests/it/: main.rs
